duniverse/lwt/test/ppx_expect/cases/run_2.expect
File "run_2.ml", line 1, characters 4-7:
Error: Uninterpreted extension 'lwt'.
