duniverse/lwt/test/ppx_expect/cases/run_2.ml
let%lwt rec () = Lwt.return ()
and () = Lwt.return ()
